test/classes/forwarding/forwarding-cycle-diffOrder.good
forwarding-cycle-diffOrder.chpl:13: In function 'main':
forwarding-cycle-diffOrder.chpl:6: error: forwarding cycle detected
forwarding-cycle-diffOrder.chpl:8: note: for the type B
